--- a/Code.html
+++ b/Code.html
@@ -6,6 +6,6 @@ Google
 </title>
 <body><b>What Up Bois</b>
 what is the going on is the 
-<a href="https://google.com" target="_blank">Yo</a>
+<a href="https://google.com" target="_blank" title="Google">Yo</a>
 </body>
 </html>
