--- a/Code.html
+++ b/Code.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
-<head>Going
-</head>
+<head></head>
 <title>
 Google
 </title>
-<body><b>What Up Bois</b>
-what is the going on is the 
+<p>GG's</p>
+<body>
+<b>What Up Bois</b>
+<br>what is the going on is the
 <a href="https://google.com" target="_blank" title="Google">Yo</a>
 </body>
 </html>
